--- a/src/css/header.css
+++ b/src/css/header.css
@@ -9,7 +9,8 @@ header {
     text-align: center;
     font-size: 1.8rem;
     font-weight: bold;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 1;
 
