--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -1,26 +1,32 @@
 a {
     text-decoration: none;
     color: #333;
-  font-weight: bold;
+    font-weight: bold;
 }
 
 nav {
     width: 10%;
     padding: 20px;
-    background-color: #ddcc9c5c;
+    background-color: #f9edcadb;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    position: sticky;
-    top: 0;
-    height: 100vh;
+    position: fixed;
+    top: 100px; 
+    left: 0;
+    height: calc(100vh - 100px); 
+    z-index: 2; 
+    overflow-y: auto; 
 }
+
 nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
+
 nav li {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
+
 a:hover {
-  color: darkblue;
+    color: darkblue;
 }
