--- a/src/index.css
+++ b/src/index.css
@@ -11,17 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 ul {
   list-style-type: none;
   padding: 0;
   margin: 0;  
 }
+
 #container{
   display: flex;
   min-height: 100vh;
   padding-top: 100px;
+  padding-left: 10%;
 }
-#container main {
+
+#id_main {
   flex: 1;
-  padding: 20px;
+  /* padding: 0; */
+  padding-left: 60px !important;
 }
